--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,14 @@
 h1 {
-    color: pink;
-  }
+  color: pink;
+}
+
+.app {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
