--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,17 @@ h1 {
   padding: 0;
   overflow: hidden;
 }
+
+.log-messages {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  width: 100%;
+  max-height: 20%;
+  overflow: auto;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 12px;
+}
