--- a/src/HamburgerMenu.scss
+++ b/src/HamburgerMenu.scss
@@ -1,27 +1,62 @@
-.hamburger-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 24px;
-}
+.hamburger-menu {
+  position: fixed; // Fixed relative to the viewport
+  top: 0;
+  right: 0;
+  z-index: 1000; // Above other content
 
-.menu {
+  // The menu stretches the full height of the viewport
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 48px; // Juster dette basert på plasseringen av hamburgerknappen
-  right: 0;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  padding: 10px;
+  justify-content: flex-start;
+  align-items: flex-end; // Aligns items to the right
 
-  a {
-    padding: 10px 15px;
-    text-decoration: none;
-    color: #333;
-
-    &:hover {
-      background-color: #f5f5f5;
+  button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 80px; // Larger icon size for better visibility
+    color: #fff; // Color of the icon
+    padding: 20px; // Larger padding for an easier touch target
+    z-index: 1001; // Ensure the button is above the menu items
+    &:focus {
+      outline: none;
     }
+  }
+
+  .menu-items {
+    display: none; // Hidden by default
+    position: fixed; // Fixed position
+    top: 0; // Starts from the very top of the screen
+    right: 0;
+    width: 400px; // Width of the menu
+    height: 100vh; // Full height of the viewport
+    background-color: rgba(51, 51, 51, 0.95); // Slightly transparent gray
+    padding-top: 100px; // Adjusted padding to push down the links
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    box-sizing: border-box; // Ensure padding is included in width
+    flex-direction: column;
+    justify-content: flex-start;
+
+    a {
+      color: #fff;
+      padding: 70px 15px; // Larger padding for bigger tap targets
+      text-decoration: none;
+      font-size: 35px; // Larger font size for menu items
+      border-bottom: 5px solid #eee; // Separator between items
+      &:last-child {
+        border-bottom: none; // No border for the last item
+      }
+      &:hover {
+        background-color: #575757; // Darker background on hover
+      }
+    }
+  }
+
+  .show {
+    display: flex; // Show the menu
+    flex-direction: column;
   }
 }
