--- a/src/HamburgerMenu.scss
+++ b/src/HamburgerMenu.scss
@@ -15,8 +15,8 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    font-size: 48px; // Larger icon size for better visibility
-    color: #fff; // Color of the icon
+    font-size: 70px; // Larger icon size for better visibility
+    color: black; // Color of the icon
     padding: 20px; // Larger padding for an easier touch target
     z-index: 1001; // Ensure the button is above the menu items
     &:focus {
@@ -29,7 +29,7 @@
     position: fixed; // Fixed position
     top: 0; // Starts from the very top of the screen
     right: 0;
-    width: 250px; // Width of the menu
+    width: 400px; // Width of the menu
     height: 100vh; // Full height of the viewport
     background-color: rgba(51, 51, 51, 0.95); // Slightly transparent gray
     padding-top: 100px; // Adjusted padding to push down the links
@@ -42,9 +42,9 @@
 
     a {
       color: #fff;
-      padding: 20px 15px; // Larger padding for bigger tap targets
+      padding: 40px 15px; // Larger padding for bigger tap targets
       text-decoration: none;
-      font-size: 24px; // Larger font size for menu items
+      font-size: 30px; // Larger font size for menu items
       border-bottom: 1px solid #eee; // Separator between items
       &:last-child {
         border-bottom: none; // No border for the last item
