--- a/src/components/HamburgerMenu.scss
+++ b/src/components/HamburgerMenu.scss
@@ -15,8 +15,8 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
-    font-size: 48px; // Larger icon size for better visibility
-    color: #fff; // Color of the icon
+    font-size: 84px; // Larger icon size for better visibility
+    color: black; // Color of the icon
     padding: 20px; // Larger padding for an easier touch target
     z-index: 1001; // Ensure the button is above the menu items
 
@@ -30,7 +30,7 @@
     position: fixed; // Fixed position
     top: 0; // Starts from the very top of the screen
     right: 0;
-    width: 300px; // Width of the menu
+    width: 475px; // Width of the menu
     height: 100vh; // Full height of the viewport
     background-color: rgba(51, 51, 51, 0.95); // Slightly transparent gray
     padding-top: 100px; // Adjusted padding to push down the links
@@ -42,11 +42,11 @@
     justify-content: flex-start;
 
     button {
-      color: #fff;
-      padding: 30px 15px; // Larger padding for bigger tap targets
+      color: white;
+      padding: 70px 30px; // Larger padding for bigger tap targets
       text-decoration: none;
-      font-size: 24px; // Larger font size for menu items
-      border-bottom: 1px solid #eee; // Separator between items
+      font-size: 42px; // Larger font size for menu items
+      border-bottom: 1px solid #eeeeee; // Separator between items
       background: none; // Make sure the button has no background
       width: 100%; // Ensure buttons occupy the full width
       text-align: left; // Align the text to the left
