--- a/src/components/LagredeKumlokk.scss
+++ b/src/components/LagredeKumlokk.scss
@@ -1,30 +1,70 @@
-/* LagredeKumlokk.scss */
-
-.lagrede-kumlokk {
-  margin: 20px;
+// Base styles
+* {
+  box-sizing: border-box;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
+body,
+html {
+  font-family: "Arial", sans-serif;
+  background-color: #f7f7f7;
+  margin: 0;
+  padding: 0;
+  font-size: 28px;
+  overflow-x: hidden; // Prevent horizontal scrolling
 }
 
-th,
-td {
+// Container for the cards with a fixed viewport height and scroll
+.container {
   padding: 10px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+  margin: 20px auto; // Provide some top and bottom space
+  overflow-y: scroll; // Allow vertical scrolling
+  height: calc(100vh - 40px); // Subtract the top and bottom margin
+  -webkit-overflow-scrolling: touch; // Smooth scrolling on touch devices
+}
+h2 {
+  color: #333; // Mørkere farge for bedre lesbarhet
+  text-align: center;
 }
 
-th {
-  background-color: #f2f2f2;
+.card {
+  background: white; // Lysere grå istedenfor hvit for å redusere belastning på øynene
+  border-radius: 10px; // Moderne avrundede hjørner
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // Subtil skygge for dybdefølelse
+
+  &:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); // Mørkere skygge ved hover
+  }
+
+  .card-content {
+    padding: 20px; // Litt mer plass inne i kortet
+    h3 {
+      color: black; // Bruk en farge for å fremheve ID-en på kumlokket
+    }
+
+    div {
+      margin-bottom: 5px; // Litt mer avstand mellom linjene
+      padding-left: 50px;
+      font-size: 36px;
+      &::before {
+        content: "• "; // Tilføy et punkttegn før hver linje for å definere nøkkelpunkter
+        color: #6c757d; // Dempet farge for punkttegnet
+      }
+    }
+  }
 }
 
-tr:hover {
-  background-color: #f5f5f5;
-}
+// Responsive adjustments
+@media (max-width: 600px) {
+  .card {
+    // Adjust the height for smaller screens to fit 3 or 4 cards
+    height: calc(
+      (100vh - 20px) / 3 - 10px
+    ); // Adjust '/3' to '/4' for four cards, etc.
+  }
 
-.no-data {
-  margin-top: 20px;
-  font-style: italic;
+  .container {
+    height: calc(100vh - 20px); // Adjust height for smaller screens
+  }
 }
