--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -1,36 +1,40 @@
 .filter-menu {
-  position: fixed; // Plasser filtermenyen på skjermen
-  top: 20px; // Plassering fra toppen
-  right: 20px; // Plassering fra høyre
-  z-index: 1000; // Sørger for at den ligger over andre elementer
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background-color: #fff; // Bakgrunnsfarge
-  border: 1px solid #ccc; // Grense rundt menyen
-  padding: 10px;
-  border-radius: 5px; // Avrundede hjørner
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); // Skyggeeffekt
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
 
-  button {
-    background-color: #f8f9fa; // Bakgrunnsfarge på knapper
-    border: 1px solid #ccc;
-    padding: 8px 12px;
-    margin: 5px 0;
-    border-radius: 4px;
+  .filter-icon {
+    background: transparent;
+    border: none;
     cursor: pointer;
-    &:hover {
-      background-color: #e2e2e2; // Endre farge når musen er over
-    }
+    font-size: 60px;
   }
 
   .filter-items {
-    display: none; // Skjul filterelementene som standard
-    flex-direction: column;
-    width: 100%; // Full bredde
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 10px;
+    width: 200px;
+
+    button {
+      background: none;
+      border: none;
+      display: block;
+      width: 100%;
+      padding: 10px;
+      text-align: left;
+
+      &:hover {
+        background-color: #f0f0f0;
+      }
+    }
   }
 
-  .filter-items.show {
-    display: flex; // Vis filterelementene når menyen er åpen
+  .show {
+    display: block; // Shows the filter options when menu is open
   }
 }
