--- a/src/components/LagredeKumlokk.scss
+++ b/src/components/LagredeKumlokk.scss
@@ -25,6 +25,11 @@ h2 {
   color: #333; // Mørkere farge for bedre lesbarhet
   text-align: center;
 }
+p {
+  font-size: 1.5em; // Adjusted for better proportionality
+  color: #555; // Softer color for better readability
+  text-align: left; // Center the text
+}
 
 .card {
   background: white; // Lysere grå istedenfor hvit for å redusere belastning på øynene
