--- a/src/components/Innstillinger.scss
+++ b/src/components/Innstillinger.scss
@@ -1,22 +1,65 @@
 .innstillinger-container {
-  background-color: #f5f5f5;
-  padding: 20px;
-  font-size: 80px; /* Increase the font size for the entire container */
-}
-
-.setting {
+  background-color: #ffffff; // White background
+  margin: 0; // Remove margin to cover the full screen width
+  padding: 0; // Remove padding to cover the full screen width
+  overflow-x: hidden; // Prevent horizontal scrolling
+  height: 100vh; // Full viewport height
+  width: 100%; // Full viewport width
   display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
+  flex-direction: column;
+  justify-content: flex-start; // Align items to the start of the container
 
-.setting-icon {
-  margin-right: 15px;
-  font-size: 200px; /* Increase the icon size */
-}
+  h2 {
+    color: #333333; // A darker color for better readability
+    margin-top: 60px; // Add some space at the top
+    margin-bottom: 60px;
+    font-size: 72px; // Adjusted font size
+    padding-left: 80px; // Padding to match the icons alignment
+    text-align: left;
+    width: 100%; // Ensure the title spans the full width
+  }
 
-.setting-name {
-  font-weight: bold;
-  color: #333;
-  font-size: 40px; /* Increase the text size */
+  .setting {
+    display: flex;
+    align-items: center;
+    padding: 50px;
+    padding-left: 80px;
+    width: 100%;
+    box-sizing: border-box;
+    transition: background-color 0.3s ease;
+
+    svg {
+      fill: #333333;
+      width: 76px;
+      height: auto;
+      margin-right: 50px;
+      transition: transform 0.3s ease; // Smooth icon scale
+    }
+
+    span {
+      color: #333333;
+      font-size: 48px; // Readable font size
+      font-weight: normal; // Font weight to match the design
+      flex-grow: 1; // Allow the text to take up remaining space
+
+      &:focus,
+      &:active {
+        outline: none; // Remove default outline
+        border: 2px solid #0056b3; // High contrast outline for focus
+      }
+    }
+
+    &:hover {
+      background-color: #f2f2f2; // Hover background color
+    }
+
+    border-bottom: 2px solid black; // Black line after each setting
+  }
+  .setting:last-child {
+    border-bottom: none;
+  }
+
+  // Ensuring that the container allows for scrolling if the content is too long
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; // Smooth scrolling on touch devices
 }
