--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -1,13 +1,12 @@
 .filtrering-container {
   .filter-icon {
     position: fixed;
-    bottom: 50px;
-    left: 25px;
+    bottom: 30px;
+    left: 20px;
     width: 110px;
     height: 110px;
-    opacity: 80%;
     background-color: #ffffff;
-    border-radius: 10%;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,6 +19,19 @@
     color: #000000; /* Change color as needed */
   }
 
+  /* Styling for the modal overlay */
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   /* Styling for the modal */
   .modal-content {
     background-color: #ffffff;
@@ -27,18 +39,18 @@
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     max-width: 80%;
+    z-index: 101; /* Ensure the modal content is above the overlay */
   }
 
   /* Styling for the select dropdown */
   select {
     width: 100%;
     padding: 10px;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-    font-size: 35px;
+    font-size: 16px;
     outline: none;
     transition: border-color 0.3s ease;
   }
@@ -50,15 +62,16 @@
 
   /* Styling for the apply filter button */
   button {
-    padding: 15px 25px;
+    padding: 10px 20px;
     background-color: #3498db;
     color: #ffffff;
     border: none;
-    border-radius: 100px;
+    border-radius: 5px;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 16px;
     transition: background-color 0.3s ease;
   }
+
   button:hover {
     background-color: #2980b9; /* Change background color on hover */
   }
