--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 90%;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
     z-index: 1001; /* Ensure the icon is above the modal */
