--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -10,7 +10,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 90%;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
     z-index: 1001; /* Ensure the icon is above the modal */
@@ -21,7 +20,6 @@
       display: none; /* Hide icon when modal is open */
     }
   }
-
   .filter-icon.hidden {
     display: none;
   }
@@ -60,6 +58,14 @@
     }
   }
 
+  h2 {
+    font-size: 4.2em;
+    font-weight: 600;
+    margin-bottom: 1.4em;
+    color: black;
+    text-align: center;
+  }
+
   .modal-header {
     display: flex;
     justify-content: flex-end;
@@ -70,6 +76,10 @@
         color: #3498db; /* Change hover color if needed */
       }
     }
+  }
+
+  .modal-body {
+    color: black;
   }
 
   /* Styling for the modal */
@@ -113,6 +123,7 @@
     font-size: 36px;
     transition: background-color 0.3s ease;
     margin-bottom: 40px;
+    margin-left: 37.4%;
   }
 
   button:hover {
