--- a/src/components/LagredeKumlokk.scss
+++ b/src/components/LagredeKumlokk.scss
@@ -21,6 +21,25 @@ html {
   -webkit-overflow-scrolling: touch;
 }
 
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  font-size: large;
+
+  label {
+    font-size: 2.4em;
+    margin-right: 10px;
+    margin-top: 35px;
+  }
+
+  select {
+    font-size: 2.6em;
+    padding: 5px 10px;
+    margin-top: 30px;
+  }
+}
+
 .tittel {
   background-color: black;
   padding: 80px;
