--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -1,8 +1,8 @@
 .filtrering-container {
   .filter-icon {
     position: fixed;
-    bottom: 30px;
-    left: 20px;
+    top: 30px;
+    right: 20px;
     width: 110px;
     height: 110px;
     background-color: #ffffff;
