--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -11,59 +11,43 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
-    z-index: 1001; /* Ensure the icon is above the modal */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1001;
     &:hover {
-      background-color: #f2f2f2; /* Change hover state color if needed */
+      background-color: #f2f2f2;
     }
     &.hidden {
-      display: none; /* Hide icon when modal is open */
+      display: none;
     }
   }
-  .filter-icon.hidden {
-    display: none;
-  }
 
-  .feather {
-    color: #000000; /* Change color as needed */
-  }
-
-  /* Styling for the modal overlay */
   .modal-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 20px;
+    left: 525px;
+    width: 80%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: flex-end; /* Aligns modal at the bottom */
+    display: block;
+    align-items: center;
     justify-content: center;
-    z-index: 1000; /* Below the filter icon */
+    z-index: 1000;
   }
 
   .modal {
-    width: 100%; /* Take the full width of the screen */
-    background-color: #ffffff;
-    border: 2px solid #ffffff; /* White border as requested */
+    width: 55%;
+    opacity: 0.9;
+    background-color: rgb(22, 22, 22);
+    border: 2px solid #ffffff;
     padding: 20px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2); /* Box-shadow for modal */
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
     transform: translateY(100%);
     transition: transform 0.3s ease-out;
-    z-index: 1001; /* Above the overlay */
+    z-index: 1001;
     &.show {
       transform: translateY(0);
     }
-  }
-
-  h2 {
-    font-size: 4.2em;
-    font-weight: 600;
-    margin-bottom: 1.4em;
-    color: black;
-    text-align: center;
   }
 
   .modal-header {
@@ -71,29 +55,36 @@
     justify-content: flex-end;
     .modal-close {
       cursor: pointer;
-      font-size: 36px; /* Adjust close icon size as needed */
+      font-size: 36px;
       &:hover {
-        color: #3498db; /* Change hover color if needed */
+        color: #3498db;
       }
     }
   }
 
   .modal-body {
-    color: black;
+    color: white;
+    label {
+      display: block;
+      margin-bottom: 30px;
+      cursor: pointer;
+      font-size: 48px;
+      user-select: none; // Prevent text selection
+
+      input[type="checkbox"] {
+        margin-right: 10px;
+      }
+    }
   }
 
-  /* Styling for the modal */
-  .modal-content {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    width: 80%;
-    margin-top: 1150px;
-    z-index: 101; /* Ensure the modal content is above the overlay */
+  h2 {
+    font-size: 3.2em;
+    font-weight: 600;
+    margin-bottom: 1.4em;
+    color: white;
+    text-align: left;
   }
 
-  /* Styling for the select dropdown */
   select {
     width: 100%;
     padding: 10px;
@@ -104,14 +95,13 @@
     font-size: 36px;
     outline: none;
     transition: border-color 0.3s ease;
+
+    &:hover,
+    &:focus {
+      border-color: #3498db;
+    }
   }
 
-  select:hover,
-  select:focus {
-    border-color: #3498db; /* Change border color on hover/focus */
-  }
-
-  /* Styling for the apply filter button */
   button {
     padding: 10px 20px;
     background-color: #3498db;
@@ -123,10 +113,9 @@
     font-size: 36px;
     transition: background-color 0.3s ease;
     margin-bottom: 40px;
-    margin-left: 37.4%;
-  }
 
-  button:hover {
-    background-color: #2980b9; /* Change background color on hover */
+    &:hover {
+      background-color: #2980b9;
+    }
   }
 }
