--- a/src/components/LagredeKumlokk.scss
+++ b/src/components/LagredeKumlokk.scss
@@ -14,34 +14,58 @@ html {
 }
 
 .container {
-  padding: 0px;
-  margin: 0px auto;
-  overflow-y: scroll;
-  height: calc(100vh - 40px);
-  -webkit-overflow-scrolling: touch;
+  padding: 20px;
+  margin: auto;
+  overflow-y: auto;
+  height: calc(100vh - 80px); // Adjusted based on your original setting
+  width: 100%; // Adjust based on your layout preference
+  max-width: 1200px; // Ensures the container is not too wide on larger screens
 }
 
 .filter {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
-  font-size: large;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 20px auto;
+  max-width: 700px;
 
   label {
-    font-size: 2.4em;
-    margin-right: 10px;
-    margin-top: 35px;
+    font-size: 1.2em;
+    margin-right: 20px;
+    color: #333;
+    font-weight: bold;
   }
 
   select {
-    font-size: 2.6em;
-    padding: 5px 10px;
-    margin-top: 30px;
+    width: 100%;
+    max-width: 400px;
+    font-size: 1.5em;
+    padding: 10px 15px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    background-color: #f7f7f7;
+    cursor: pointer;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    appearance: none;
+
+    &:hover {
+      border-color: #888;
+    }
+    &:focus {
+      border-color: #505050;
+      outline: none;
+      box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    }
   }
 }
 
 .tittel {
-  background-color: black;
+  background-color: rgb(22, 22, 22);
   padding: 80px;
   margin: 0;
   margin-top: -10px;
@@ -104,9 +128,9 @@ p {
     margin-right: 10px;
 
     .icon {
-      font-size: 70px; // Adjust size as needed
+      font-size: 70px;
       color: #5d534a;
-      margin-bottom: 30px; // Adjust spacing as needed
+      margin-bottom: 30px;
     }
   }
 
@@ -115,7 +139,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 20px; // Space after icons
+    padding-left: 20px;
 
     div {
       font-size: 2.2em;
