--- a/src/components/Filtrering.scss
+++ b/src/components/Filtrering.scss
@@ -5,7 +5,7 @@
     right: 20px;
     width: 110px;
     height: 110px;
-    background-color: #ffffff;
+    background-color: rgb(22, 22, 22);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -14,7 +14,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1001;
     &:hover {
-      background-color: #f2f2f2;
+      background-color: rgb(22, 22, 22);
     }
     &.hidden {
       display: none;
@@ -24,7 +24,7 @@
   .modal-overlay {
     position: fixed;
     top: 20px;
-    left: 525px;
+    left: 300px;
     width: 80%;
     height: 100%;
     display: block;
@@ -34,10 +34,9 @@
   }
 
   .modal {
-    width: 55%;
+    width: 85%;
     opacity: 0.9;
     background-color: rgb(22, 22, 22);
-    border: 2px solid #ffffff;
     padding: 20px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -55,7 +54,8 @@
     justify-content: flex-end;
     .modal-close {
       cursor: pointer;
-      font-size: 36px;
+      font-size: 86px;
+      color: white;
       &:hover {
         color: #3498db;
       }
@@ -65,14 +65,17 @@
   .modal-body {
     color: white;
     label {
-      display: block;
+      display: flex;
       margin-bottom: 30px;
+      align-items: center;
       cursor: pointer;
       font-size: 48px;
       user-select: none; // Prevent text selection
 
       input[type="checkbox"] {
-        margin-right: 10px;
+        margin-right: 20px;
+        transform: scale(1.5);
+        vertical-align: middle;
       }
     }
   }
@@ -80,6 +83,7 @@
   h2 {
     font-size: 3.2em;
     font-weight: 600;
+    margin-top: -10px;
     margin-bottom: 1.4em;
     color: white;
     text-align: left;
