--- a/src/components/LagredeKumlokk.scss
+++ b/src/components/LagredeKumlokk.scss
@@ -14,25 +14,24 @@ html {
 }
 
 .container {
-  padding: 20px;
-  margin: auto;
-  overflow-y: auto;
-  height: calc(100vh - 80px); // Adjusted based on your original setting
-  width: 100%; // Adjust based on your layout preference
-  max-width: 1200px; // Ensures the container is not too wide on larger screens
+  padding: 0px;
+  margin: 0px auto;
+  overflow-y: scroll;
+  height: calc(100vh - 40px);
+  -webkit-overflow-scrolling: touch;
 }
 
 .filter {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
+  font-size: 2.1rem;
   padding: 20px;
   background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   margin: 20px auto;
-  max-width: 700px;
+  width: 90%;
 
   label {
     font-size: 1.2em;
@@ -43,7 +42,7 @@ html {
 
   select {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     font-size: 1.5em;
     padding: 10px 15px;
     border: 2px solid #ccc;
@@ -52,20 +51,11 @@ html {
     cursor: pointer;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     appearance: none;
-
-    &:hover {
-      border-color: #888;
-    }
-    &:focus {
-      border-color: #505050;
-      outline: none;
-      box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-    }
   }
 }
 
 .tittel {
-  background-color: rgb(22, 22, 22);
+  background-color: black;
   padding: 80px;
   margin: 0;
   margin-top: -10px;
@@ -86,7 +76,7 @@ p {
 
 .card {
   border: 3px solid black;
-  margin: 10px 10px;
+  margin: 10px 30px;
   background: #ffffff;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -128,9 +118,9 @@ p {
     margin-right: 10px;
 
     .icon {
-      font-size: 70px;
+      font-size: 70px; // Adjust size as needed
       color: #5d534a;
-      margin-bottom: 30px;
+      margin-bottom: 30px; // Adjust spacing as needed
     }
   }
 
@@ -139,7 +129,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 20px;
+    padding-left: 20px; // Space after icons
 
     div {
       font-size: 2.2em;
