--- a/src/components/LagredeKumlokk.scss
+++ b/src/components/LagredeKumlokk.scss
@@ -3,8 +3,7 @@
   box-sizing: border-box;
 }
 
-body,
-html {
+body, html {
   font-family: "Arial", sans-serif;
   background-color: #f7f7f7;
   margin: 0;
@@ -13,45 +12,17 @@ html {
   overflow-x: hidden;
 }
 
-.container {
-  padding: 0px;
-  margin: 0px auto;
-  overflow-y: scroll;
-  height: calc(100vh - 40px);
-  -webkit-overflow-scrolling: touch;
+p{
+  font-size: 30px;
 }
 
-.filter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2.1rem;
+.container {
   padding: 20px;
-  background-color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  margin: 20px auto;
-  width: 90%;
-
-  label {
-    font-size: 1.2em;
-    margin-right: 20px;
-    color: #333;
-    font-weight: bold;
-  }
-
-  select {
-    width: 100%;
-    max-width: 500px;
-    font-size: 1.5em;
-    padding: 10px 15px;
-    border: 2px solid #ccc;
-    border-radius: 8px;
-    background-color: #f7f7f7;
-    cursor: pointer;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-    appearance: none;
-  }
+  margin: 0 auto;
+  overflow-y: auto;
+  height: calc(100vh - 40px);
+  width: 100%;
+  max-width: 1200px;
 }
 
 .tittel {
@@ -60,6 +31,7 @@ html {
   margin: 0;
   margin-top: -10px;
 }
+
 h2 {
   font-size: 4.2em;
   font-weight: 400;
@@ -68,10 +40,111 @@ h2 {
   text-align: center;
 }
 
-p {
-  font-size: 2.5em;
-  color: #555;
-  text-align: center;
+.filter {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 20px auto;
+  font-size: 20px;
+  width: 90%;
+  cursor: pointer;
+
+  .filter-dropdown {
+    display: flex;
+    align-items: center;
+    font-size: 1.5em;  // Increased font size for better readability
+  }
+
+  .dropdown-icon {
+    margin-left: 10px;
+    transition: transform 0.3s ease;
+  }
+
+  .flipped {
+    transform: rotate(180deg);
+  }
+
+  .dropdown-menu {
+    position: absolute;
+    font-size: 35px;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;  // Increased padding for more space
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+    z-index: 100;
+
+    label {
+      display: block;
+      margin: 10px 0;  // Increased margin for better spacing
+      font-size: 1.2em;  // Increased label font size
+
+      input[type="checkbox"] {
+        margin-right: 30px;
+        transform: scale(2.5);  // Larger checkboxes
+      }
+    }
+  }
+}
+
+.active-filters {
+  margin: 20px auto;
+  padding: 20px;  // Slightly increased padding for more internal space
+  background-color: #eef;
+  border-radius: 8px;
+  font-size: 30px;  // Increased font size
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 800px;  // Increased max-width
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+
+  h4 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .filter-tag {
+    margin: 5px;
+    padding: 5px 10px;
+    background-color: #d1e0e0;
+    border-radius: 5px;
+    display: inline-flex;
+    align-items: center;
+    font-size: 1em;
+    color: #333;
+
+    svg {
+      margin-left: 5px;
+      cursor: pointer;
+    }
+  }
+
+  button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #c8a165;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+
+    &:hover {
+      background-color: #b2855e;
+    }
+  }
 }
 
 .card {
@@ -97,7 +170,7 @@ p {
   display: flex;
   align-items: center;
   cursor: pointer;
-  position: relative;
+  position:relative;
   padding: 85px 25px;
 
   .kum {
@@ -118,9 +191,9 @@ p {
     margin-right: 10px;
 
     .icon {
-      font-size: 70px; // Adjust size as needed
+      font-size: 70px;
       color: #5d534a;
-      margin-bottom: 30px; // Adjust spacing as needed
+      margin-bottom: 30px;
     }
   }
 
@@ -129,7 +202,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 20px; // Space after icons
+    padding-left: 20px;
 
     div {
       font-size: 2.2em;
