--- a/src/components/bottomnavigation.scss
+++ b/src/components/bottomnavigation.scss
@@ -9,6 +9,7 @@
   padding: 45px 0;
   z-index: 1000;
   font-size: 42px; // Larger icons
+  border-radius: 20px;
 
   .nav-icon {
     margin: 0 90px;
